<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="1"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="400dp"
        android:layout_height="725dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textViewDatTraSua"
                android:layout_width="match_parent"
                android:layout_height="48dp"

                android:autoSizePresetSizes="15sp"
                android:gravity="center"
                android:text="@string/titleDatTraSua"
                android:textColor="#01ADC3"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textChon"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:gravity="center"
                android:text="@string/titleChonSize"
                android:textColor="#DD8708"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="158dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radGroupSize"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp">

                    <RadioButton
                        android:id="@+id/radSizeS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onSizeClicked"
                        android:text="@string/SizeS" />

                    <RadioButton
                        android:id="@+id/radSizeM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onSizeClicked"
                        android:text="@string/SizeM" />

                    <RadioButton
                        android:id="@+id/radSizeL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onSizeClicked"
                        android:text="@string/SizeL" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="285dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="148dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/chkTC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onToppingClicked"
                            android:text="@string/Tranchau" />

                        <CheckBox
                            android:id="@+id/chkTCT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onToppingClicked"
                            android:text="@string/Tranchautrang" />

                        <CheckBox
                            android:id="@+id/chkKC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onToppingClicked"
                            android:text="@string/KemCheese" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/chkPT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onToppingClicked"
                            android:text="@string/PuddingTr" />

                        <CheckBox
                            android:id="@+id/chkPTS"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onToppingClicked"
                            android:text="@string/PuddingTS" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/textLoai"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="center"
                android:text="@string/TitleChonLoai"
                android:textColor="#FFDD8708"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radGroupTra"
                    android:layout_width="158dp"
                    android:layout_height="306dp"
                    android:layout_marginLeft="10dp"
                    android:background="#FFFFFF">

                    <RadioButton
                        android:id="@+id/radTraDao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onTraClicked"
                        android:text="@string/tradao" />

                    <RadioButton
                        android:id="@+id/radTraLai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onTraClicked"
                        android:text="@string/tralai" />

                    <RadioButton
                        android:id="@+id/radTraPBT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onTraClicked"
                        android:text="@string/traphucbontu" />

                    <RadioButton
                        android:id="@+id/radTraDen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onTraClicked"
                        android:text="@string/tradenma" />

                    <RadioButton
                        android:id="@+id/radTraSen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onTraClicked"
                        android:text="@string/trasen" />

                    <RadioButton
                        android:id="@+id/radTraSuaMacCa"
                        android:layout_width="match_parent"
                        android:layout_height="59dp"
                        android:onClick="onTraClicked"
                        android:text="@string/trasuamacca" />

                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="305dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgTra"
                        android:layout_width="220dp"
                        android:layout_height="258dp"
                        android:contentDescription="@string/contenImg"
                        android:paddingLeft="10dp" />

                    <Button
                        android:id="@+id/btnChiTiet"
                        android:layout_width="222dp"
                        android:layout_height="wrap_content"
                        android:onClick="onChiTietTraClicked"
                        android:text="@string/btnThongTinTra"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="304dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textSoLuong"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:gravity="center"
                    android:text="@string/txtinputSL"
                    android:textColor="#FFDD8708"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/inputSoLuong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="1"
                    android:ems="10"
                    android:gravity="end"
                    android:hint="@string/inputSL"
                    android:inputType="number"
                    android:labelFor="@id/textSoLuong"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/Ghichu"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center"
                    android:text="@string/GhiChu"
                    android:textColor="#FFDD8708"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextGhiChu"
                    android:layout_width="match_parent"
                    android:layout_height="87dp"
                    android:autofillHints="@string/txtGhiChu"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/txtGhiChu"
                    android:inputType="textMultiLine"
                    android:labelFor="@id/Ghichu"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnHienThiTraSuaDaDat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="ButtonClick"
                    android:text="@string/btnHienThiLoaiTraDaDat"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>