<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hienThiThongTin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="206dp">

        <TextView
            android:id="@+id/textViewThongTin"
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:gravity="center"
            android:text="@string/TitleKetQuaChon"
            android:textColor="#01ADC3"
            android:textSize="25sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="305dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="10sp">

                <TextView
                    android:id="@+id/txtkqSize"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:text="@string/Size"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtkqtopping"
                    android:layout_width="match_parent"
                    android:layout_height="99dp"
                    android:text="@string/Topping"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtkqloai"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:text="@string/Loai"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtkqsl"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:text="@string/SoLuong"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtkqghichu"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/GhiChu"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewSize"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewTopping"
                    android:layout_width="match_parent"
                    android:layout_height="99dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewLoai"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewSL"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewGhiChu"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnGuiTinNhan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SendSMS"
                android:text="@string/btnGuiTin"
                android:textSize="17sp"
                app:rippleColor="#4A4A4A" />

            <Button
                android:id="@+id/btnDiaDiem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="DisplayMap"
                android:text="@string/btnHienThiDiaDiem"
                android:textSize="17sp"
                app:rippleColor="#4A4A4A" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>